# CS676

./: .env.example  Project_1,_Deliverable_1_Fall_2025.ipynb  Project_1_Deliverable_2_Scoring_System_Hybrid_Method.ipynb  Project_1_Deliverable_3.py  app.py  deliverable_3.py  pyproject.toml
Project2/: Deliverable2Summary.md
Project2/tinytroupeproj/: main.py  pyproject.toml
